Created test for nested inlines in a function call.  Fixed issues.